$Id$

Denora v1.4.4-SVN
-----------------

Additions
n/a

Changes
09/04/21 r280 Updated GeoIP.dat

Fixes
09/04/21 r279 Fixed inspircd ADDLINE using wrong timestamp [closes #542] 
09/04/21 r279 Removed handling of SVSNICK from inspircd modules [closes #540]
09/03/24 r278 Fixed crash on missing channel mode parameter

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a


Denora v1.4.3
-------------

Additions
09/03/04 r266 Added support for nick change flood chanmode
09/02/25 r257 Improved nick tracking on nick change for +r users
09/02/22 r250 Added InspIRCd 1.2 support [closes #527]

Changes
09/03/10 r270 Updated GeoIP.dat
09/02/22 r249 CTCP VERSION is now handled by alias if present

Fixes
09/03/15 r273 Fixed crash on incoming global notice (introduced in r249)
09/03/13 r272 Fixed autoop not working properly with partonempty disabled
09/03/13 r272 Fixed crash on restart/shutdown with partonempty enabled
09/03/12 r271 Always create global ustats record if not existing
09/03/10 r270 Fixed crash in chanstats [closes #531]
09/03/09 r268 Fixed inspircd12 counting opers twice
09/03/06 r267 SQL chans now default to +s to avoid race condition [closes #494]
09/03/04 r264 Fixed SQL not always working after reinitialization [closes #529]
09/03/02 r261 Make inspircd12 module check for TS6 and numeric on load
09/02/26 r256 Fixed missing NICK handling in inspircd12
09/02/26 r256 Nick tracking no longer removes old nick alias on nick change
09/02/25 r255 Fixed segfault on missing chan +f parameter in ircd message
09/02/23 r253 [2] Patch fixing some memleaks
09/02/22 r250 Added missing AWAY message handling in inspircd11
09/02/22 r247 Fixed sending broken CAPAB message to Plexus3
09/02/22 r247 Workaround for missing EOB in Charybdis and NGircd
09/02/19 r244 Fixed Plexus3 TOPIC, KILL, NICK, EOB handling and chanmode +z
09/02/17 r242 Fixed handling of Plexus3 UID message in TS6 mode
09/02/17 r242 Added missing TMODE implementation in Plexus3