@@ -9,9 +9,14 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="4"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="280"
+VERSION_BUILD="281"
 
 # $Log$
+#
+# 2009-05-03 19:37:33 1.4.4.281 (SVN) hal9000 [#539,#543]
+# > Fixed crash when setting debug 2 with logchan enabled
+# > Fixed UMODE r change in Plexus3
+# 
 #
 # 2009-04-21 11:17:22 1.4.4.280 (SVN) hal9000 [#]
 # > Updated GeoIP.dat
